[gd_scene load_steps=30 format=2]

[ext_resource path="res://gun/materials/Reference.obj" type="ArrayMesh" id=1]
[ext_resource path="res://gun/materials/Parts.jpg" type="Texture" id=2]
[ext_resource path="res://gun/materials/Base.jpg" type="Texture" id=3]
[ext_resource path="res://gun/materials/MagPlane.jpg" type="Texture" id=4]
[ext_resource path="res://gun/materials/Vise.jpg" type="Texture" id=5]
[ext_resource path="res://gun/Gun.gd" type="Script" id=6]
[ext_resource path="res://gun/materials/GripMat.jpg" type="Texture" id=7]
[ext_resource path="res://gun/materials/Mag.jpg" type="Texture" id=8]
[ext_resource path="res://gun/materials/Safety.jpg" type="Texture" id=9]
[ext_resource path="res://gun/materials/EjectionPort.jpg" type="Texture" id=10]
[ext_resource path="res://gun/materials/Grip.jpg" type="Texture" id=11]
[ext_resource path="res://bullet/Bullet.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=4]
resource_name = "Fire"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1.1645 ), Vector3( 0, 0, 0.8 ), Vector3( 0, 0, 1.164 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( 0, -90, 5 ), Vector3( 0, -90, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1.1645 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Reload"
length = 1.5
step = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( 0, -20, 20 ), Vector3( 0, -20, 20 ), Vector3( 0, -90, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 1.1645 ), Vector3( 0.5, 0, 0.5 ), Vector3( 0.5, 0, 0.5 ), Vector3( 0, 0, 1.1645 ) ]
}

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 9 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=11]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 11 )

[sub_resource type="SpatialMaterial" id=14]
albedo_texture = ExtResource( 7 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 8 )

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 10 )

[sub_resource type="SpatialMaterial" id=17]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=18]
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=19]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=20]
albedo_texture = ExtResource( 5 )

[node name="Gun" type="Spatial"]
transform = Transform( -3.0598e-08, 0, -0.7, 0, 0.7, 0, 0.7, 0, -3.0598e-08, 0, 0, 1.1645 )
script = ExtResource( 6 )
Bullet = ExtResource( 12 )

[node name="Muzzle" type="Position3D" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -2.83871, 0.47158, -0.459385 )
__meta__ = {
"_edit_group_": true
}

[node name="ShotDelay" type="Timer" parent="."]

[node name="ReloadDelay" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fire = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Reload = SubResource( 6 )

[node name="Reference" type="MeshInstance" parent="."]
transform = Transform( 1.50996e-08, 0, -0.2, 0, 0.2, 0, 0.2, 0, 1.50996e-08, -1.42857, 0, -0.582649 )
mesh = ExtResource( 1 )
material/0 = SubResource( 7 )
material/1 = SubResource( 8 )
material/2 = SubResource( 9 )
material/3 = SubResource( 10 )
material/4 = SubResource( 11 )
material/5 = SubResource( 12 )
material/6 = SubResource( 13 )
material/7 = SubResource( 14 )
material/8 = SubResource( 15 )
material/10 = SubResource( 16 )
material/11 = SubResource( 17 )
material/12 = SubResource( 18 )
material/13 = SubResource( 19 )
material/14 = SubResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="ShotDelay" to="." method="_on_ShotDelay_timeout"]
[connection signal="timeout" from="ReloadDelay" to="." method="_on_ReloadDelay_timeout"]
